# WHISPER_AI

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
analysis/at2017gfo_villar/: PLAN_fullband.md  fetch_at2017gfo_full.py  preprocess_at2017gfo.py  runtime_plot.py  villar.py  villar_plots.py
analysis/at2017gfo_villar/data/: at2017gfo_full.csv
analysis/at2017gfo_villar/figures/at2017gfo_villar/: villar_abc_smc.json  villar_npe_mdn.json  villar_npe_nsf.json  villar_snpe5_nsf.json
analysis/at2017gfo_villar/figures/at2017gfo_villar_full/: villar_abc_smc.json  villar_mcmc.json
analysis/at2017gfo_villar/figures/at2017gfo_villar_full_flux/: villar_npe_mdn.json  villar_npe_nsf.json
analysis/at2017gfo_villar/figures/at2017gfo_villar_full_preprocessed/: villar_abc.json  villar_abc_smc.json  villar_mcmc.json  villar_npe_mdn.json  villar_npe_nsf.json  villar_snpe5_nsf.json
analysis/at2017gfo_villar/reports/: REPORT_at2017gfo_villar.md  REPORT_at2017gfo_villar_full.md  REPORT_at2017gfo_villar_full_flux.md  REPORT_at2017gfo_villar_full_preprocessed.md
dev/: _scan_seed.py  demo_abc_at2017gfo.py  demo_ingestion.py  demo_kilonova.py  demo_mck19.py  demo_snpe.py  diagnose_mck19_at2017gfo.py  fit_kilonova_at2017gfo.py  fit_mck19_at2017gfo.py  report_at2017gfo.py
dev/figures/: at2017gfo_flare_abc.json  at2017gfo_gaussian_rise_abcsmc.json
docker/: Dockerfile
docs/: API_REFERENCE.md  BENCHMARK.md  DESIGN.md  EXTENDING.md  PLAN_at2017gfo_fullband.md  REPORT_at2017gfo.md  REPORT_at2017gfo_villar.md  REPORT_at2017gfo_villar_full.md  REPORT_at2017gfo_villar_full_flux.md  REPORT_ingestion_upgrade.md  TUTORIAL.md
docs/figures/: at2017gfo_abc_flare_r.json  at2017gfo_bazin_abc.json  at2017gfo_bazin_abcsmc.json  at2017gfo_flare_abc.json  at2017gfo_flare_abcsmc.json  at2017gfo_gaussian_rise_abc.json  at2017gfo_gaussian_rise_abcsmc.json
docs/figures/at2017gfo_villar/: villar_abc.json  villar_abc_smc.json  villar_mcmc.json  villar_npe_mdn.json  villar_npe_nsf.json  villar_snpe5_nsf.json  villar_snpe5_tcn.json
docs/figures/at2017gfo_villar_full/: villar_abc.json  villar_npe_mdn.json  villar_npe_nsf.json  villar_snpe5_nsf.json
docs/figures/at2017gfo_villar_full_flux/: villar_abc.json  villar_abc_smc.json  villar_mcmc.json  villar_snpe5_nsf.json
docs/figures/at2017gfo_villar_full_preprocessed/: villar_abc.json  villar_abc_smc.json  villar_snpe5_nsf.json
docs/figures/sanity_check/: REPORT.md  sanity_bazin_sn_abc.json  sanity_bazin_sn_abc_smc.json  sanity_bazin_sn_mcmc.json  sanity_bazin_sn_npe_mdn.json  sanity_bazin_sn_npe_nsf.json  sanity_bazin_sn_snpe5_mlp.json  sanity_bazin_sn_snpe5_plain.json  sanity_bazin_sn_snpe5_tcn.json  sanity_bazin_sn_snpe_mdn.json  sanity_bazin_sn_snpe_nsf.json  sanity_damped_sine_abc.json  sanity_damped_sine_abc_smc.json  sanity_damped_sine_mcmc.json  sanity_damped_sine_snpe.json  sanity_gp2_abc.json  sanity_gp2_abc_smc.json  sanity_gp2_npe.json  sanity_gp4_abc.json  sanity_gp4_abc_smc.json  sanity_gp4_mcmc.json  sanity_gp4_npe.json  sanity_gp6_abc.json  sanity_gp6_abc_smc.json  sanity_gp6_mcmc.json  sanity_sbc_bazin_sn_abc.json  sanity_sbc_bazin_sn_abc_smc.json  sanity_sbc_bazin_sn_mcmc.json  sanity_sbc_bazin_sn_npe_mdn.json  sanity_sbc_bazin_sn_npe_nsf.json  sanity_sbc_damped_sine_abc.json  sanity_sbc_damped_sine_abc_smc.json  sanity_sbc_damped_sine_npe.json
examples/: at2017gfo_quickstart.ipynb
notebooks/: 01_lightcurves.ipynb  02_models.ipynb  03_samplers.ipynb  04_visualizing.ipynb  05_bayesian_model_comparison.ipynb  README.md  _build_notebooks.py
sanity_check/: BENCHMARK.md  benchmark_kilonova_modes.py  benchmark_snpe_device.py  compare_samplers.py  corner_kilonova_benchmark.py  sanity_check.py  sanity_check_plots.py  sanity_mck19_modes.py
sanity_check/figures/: REPORT.md  mck19_modes_results.json  sanity_bazin_sn_abc_smc.json  sanity_bazin_sn_npe_nsf.json  sanity_damped_sine_npe.json  sanity_gp2_abc_smc.json  sanity_gp2_mcmc.json  sanity_gp4_abc_smc.json  sanity_gp6_abc_smc.json  sanity_gp6_npe.json  sanity_sbc_bazin_sn_abc.json  sanity_sbc_bazin_sn_abc_smc.json  sanity_sbc_bazin_sn_npe_nsf.json  sanity_sbc_damped_sine_mcmc.json  snpe_device_benchmark.json
scripts/: _scan_seed.py  at2017gfo_villar.py  at2017gfo_villar_plots.py  benchmark_kilonova_modes.py  benchmark_snpe_device.py  compare_samplers.py  corner_kilonova_benchmark.py  demo_abc_at2017gfo.py  demo_ingestion.py  demo_kilonova.py  demo_mck19.py  demo_snpe.py  diagnose_mck19_at2017gfo.py  fetch_at2017gfo_full.py  fit_kilonova_at2017gfo.py  fit_mck19_at2017gfo.py  phase0_smoke.py  preprocess_at2017gfo.py  report_at2017gfo.py  sanity_check.py  sanity_check_plots.py  sanity_mck19_modes.py
tests/: conftest.py  test_abc.py  test_abc_smc.py  test_bands.py  test_benchmark_kilonova.py  test_distance.py  test_embeddings.py  test_ingestion.py  test_likelihood.py  test_loader.py  test_mck19.py  test_mcmc.py  test_metrics.py  test_models.py  test_photometry.py  test_plotting.py  test_priors.py  test_registries.py  test_review_fixes.py  test_scatter.py  test_schema.py  test_snpe.py  test_svo.py  test_table_lc.py  test_two_component_kilonova.py  test_units.py  test_validation.py
tests/data/: at2017gfo.csv  at2017gfo_full_preprocessed.csv  ztf18aarlhfw.csv
whisper_labia/: __init__.py  distance.py  embeddings.py  likelihood.py  metrics.py  plotting.py  priors.py  validation.py
whisper_labia/io/: __init__.py  bands.py  loader.py  photometry.py  schema.py  svo.py  units.py
whisper_labia/models/: __init__.py  bazin.py  flare.py  gaussian_rise.py  mck19.py  two_component_kilonova.py
whisper_labia/samplers/: __init__.py  abc.py  abc_smc.py  base.py  mcmc.py  snpe.py
