[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-labia"
version = "0.0.1.dev0"
description = "Whisper: easy, extensible Bayesian model comparison of astronomical transient light curves."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Phelipe Darc", email = "phelipedarc@gmail.com" }]
keywords = ["astronomy", "transients", "bayesian", "mcmc", "nested-sampling", "supernova", "kilonova", "tde"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Development Status :: 3 - Alpha",
]

# Core deps cover data ingestion + plotting (Phase 1) and the Whisper-owned samplers; they are all
# pure-Python / wheels (no compiler needed), with permissive bounds so installing Whisper never forces
# a numpy/scipy downgrade. redback is an OPTIONAL extra (it provides the physical models + priors and
# needs a C compiler for sncosmo); the strict numpy==1.26 / scipy<1.14 pins come from redback itself.
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "matplotlib>=3.5",
    "astropy>=5.0",
    "emcee>=3.1",
    "dynesty>=2.0",
    "corner>=2.2",
    "tqdm",
]

[project.optional-dependencies]
models = ["redback>=1.12"]    # physical transient models + priors (also pulls bilby, sncosmo, afterglowpy)
svo = ["astroquery>=0.4.6"]   # SVO Filter Profile Service fallback for unknown bands
dev = ["pytest", "pytest-cov", "build", "astroquery>=0.4.6"]
sbi = ["sbi", "torch"]        # SNPE / NPE sampler (whisper_labia.samplers.snpe)
abc = ["pyabc"]               # Milestone 2

[project.urls]
Homepage = "https://github.com/phelipedarc/WHISPER_AI"
Repository = "https://github.com/phelipedarc/WHISPER_AI"

[tool.setuptools.packages.find]
where = ["."]
include = ["whisper_labia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: slow tests (e.g. SNPE neural-net training); deselect with -m 'not slow'",
]
