[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-labia"
dynamic = ["version"]                      # single-sourced from whisper_labia.__version__
description = "Whisper: easy, extensible Bayesian model comparison of astronomical transient light curves."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Phelipe Darc", email = "phelipedarc@gmail.com" }]
keywords = ["astronomy", "transients", "bayesian", "mcmc", "nested-sampling", "supernova", "kilonova", "tde"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
]

# Core deps cover data ingestion + plotting (Phase 1) and the Whisper-owned samplers; they are all
# pure-Python / wheels (no compiler needed), with permissive bounds so installing Whisper never forces
# a numpy/scipy downgrade. redback is an OPTIONAL extra (it provides the physical models + priors and
# needs a C compiler for sncosmo); the strict numpy==1.26 / scipy<1.14 pins come from redback itself.
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "matplotlib>=3.5",
    "astropy>=5.0",
    "emcee>=3.1",
    "dynesty>=2.0",
    "corner>=2.2",
    "tqdm",
]

[project.optional-dependencies]
models = ["redback>=1.12"]    # physical transient models + priors (also pulls bilby, sncosmo, afterglowpy)
svo = ["astroquery>=0.4.6"]   # SVO Filter Profile Service fallback for unknown bands
dev = ["pytest", "pytest-cov", "build", "astroquery>=0.4.6"]
sbi = ["sbi", "torch"]        # SNPE / NPE sampler (whisper_labia.samplers.snpe)
loo = ["arviz>=0.15"]         # PSIS-LOO / ELPD in predictive_metrics (degrades to None without it)
abc = ["pyabc"]               # Milestone 2

[project.urls]
Homepage = "https://github.com/phelipedarc/WHISPER_AI"
Repository = "https://github.com/phelipedarc/WHISPER_AI"
Documentation = "https://github.com/phelipedarc/WHISPER_AI/tree/main/docs"
Issues = "https://github.com/phelipedarc/WHISPER_AI/issues"
Changelog = "https://github.com/phelipedarc/WHISPER_AI/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "whisper_labia.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["whisper_labia*"]

[tool.setuptools.package-data]
whisper_labia = ["py.typed"]               # ship the typing marker so type hints reach consumers

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: slow tests (e.g. SNPE neural-net training); deselect with -m 'not slow'",
]

[tool.coverage.run]
source = ["whisper_labia"]
omit = ["*/tests/*"]
